# spotify-playlist-mirror-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  local_mirror.py  main.py  pyproject.toml  song_cache.py  test_downloads.py  test_events.py  test_local_mirror.py  test_main.py  test_playlists.py  test_reconcile.py  test_sync_service.py  test_web.py  ytmusic_mirror.py
.github/workflows/: ci.yml
docs/design/: 2026-07-12-web-gui-architecture.md  design-brief.md
docs/plans/: 2026-07-13-web-gui-phase1.md  2026-07-13-web-gui-phase2.md  2026-07-13-web-gui-phase3.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/design-source/: omni-design.dc.html  omni-theme.css
frontend/e2e/: verify.cjs
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
omni_sync/: __init__.py  cli.py
omni_sync/engine/: __init__.py  config.py  downloads.py  jellyfin.py  logs.py  matching.py  runner.py  spotify.py  spotify_web.py
omni_sync/services/: __init__.py  events.py  playlists.py  (+4 more)
promo/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remotion.config.ts  tsconfig.json
spotify_mirror/: archive.py  config.py  downloads.py  events.py  jellyfin.py  runner.py  spotify.py  sync_service.py
tests/: test_connectors.py  test_downloads.py  test_events.py  test_logs_sink.py  test_matching.py  test_playlists.py  test_reconcile.py  test_runner_summary.py  test_settings.py  test_sync_service.py  test_targets_accessors.py  test_transfers.py  test_web.py  test_ytmusic_stub.py
(+136 files in other folders)
